[project]
name = "quantize"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "torch>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
